# promptguard-python

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml  sync-from-api.yml
promptguard/: __init__.py  _resolve.py  auto.py  client.py  config.py  guard.py
promptguard/integrations/: __init__.py  crewai.py  langchain.py  llamaindex.py
promptguard/patches/: __init__.py  _base.py  anthropic_patch.py  bedrock_patch.py  cohere_patch.py  google_patch.py  openai_patch.py
scripts/: generate_types_from_spec.py
tests/: api-contract.json  guard-contract.json  test_api_contract.py  test_audit_fixes.py  test_auto_instrumentation.py  test_client.py  test_client_streaming.py  test_contract.py  test_generate_types.py  test_guard_client.py  test_integrations.py  test_wrappers.py  validate_openapi.py
